KSENROLL-14780: Fix for text wrapping issues in Reg Window.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@76072 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-manageRegistration.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-manageRegistration.less
@@ -1,6 +1,7 @@
 .ks-ManageRegistration {
     & #Uif-BreadcrumbWrapper {
       height: 30px;
+      overflow: hidden;
     }
 
     &-show {
@@ -54,7 +55,7 @@
    &  > thead > tr > td,
    &  > tbody > tr > td,
    &  > tfoot > tr > td {
-      padding: 10px 5px 5px;
+      padding: 1rem 0.5rem 0.5rem 0;
    }
 }
 
@@ -77,8 +78,11 @@
 
         & label,
         & div {
-          .ks-mixin--flex;
           white-space: nowrap;
+        }
+
+        & .uif-collection-column-action div{
+          .ks-mixin--flex;
         }
     }
 }
